--- a/uineweki.ui
+++ b/uineweki.ui
@@ -7,41 +7,66 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>306</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>NOTEPAD</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(205, 220, 255);</string>
+   <string notr="true">background-color: rgb(64, 64, 64);</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>270</y>
+     <x>150</x>
+     <y>259</y>
      <width>151</width>
      <height>21</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Bahnschrift Light SemiCondensed</family>
+     <family>Leelawadee UI</family>
+     <pointsize>10</pointsize>
+     <underline>false</underline>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">color: #75b8ff</string>
+   </property>
    <property name="text">
-    <string>                     by iMAGA</string>
+    <string>by iMAGA</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>41</x>
-     <y>33</y>
-     <width>71</width>
-     <height>17</height>
+     <x>27</x>
+     <y>37</y>
+     <width>84</width>
+     <height>21</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Bahnschrift SemiBold Condensed</family>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+         color: #ffdb6f;
+         background-color: rgb(64, 64, 64);;
+         min-width: 80px;
+     }
+
+QPushButton:pressed {
+         background-color: rgb(64, 64, 64);;
+	
+}</string>
    </property>
    <property name="text">
     <string>Open file</string>
@@ -50,11 +75,31 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>122</x>
-     <y>33</y>
-     <width>56</width>
-     <height>17</height>
+     <x>119</x>
+     <y>37</y>
+     <width>82</width>
+     <height>21</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Bahnschrift SemiBold Condensed</family>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+         color: #ffdb6f;
+         background-color: rgb(64, 64, 64);;
+         min-width: 80px;
+     }
+
+QPushButton:pressed {
+         background-color: rgb(64, 64, 64);;
+	
+}</string>
    </property>
    <property name="text">
     <string>Save</string>
@@ -63,11 +108,31 @@
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>33</y>
-     <width>56</width>
-     <height>17</height>
+     <x>207</x>
+     <y>37</y>
+     <width>82</width>
+     <height>21</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Bahnschrift SemiBold Condensed</family>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+         color: #ffdb6f;
+         background-color: rgb(64, 64, 64);;
+         min-width: 80px;
+     }
+
+QPushButton:pressed {
+         background-color: rgb(64, 64, 64);;
+	
+}</string>
    </property>
    <property name="text">
     <string>Save as</string>
@@ -76,8 +141,8 @@
   <widget class="QLabel" name="NOTEPAD">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>-1</y>
+     <x>158</x>
+     <y>9</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -88,6 +153,9 @@
      <pointsize>12</pointsize>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">color: #75b8ff;</string>
+   </property>
    <property name="text">
     <string>NOTEPAD</string>
    </property>
@@ -96,10 +164,30 @@
    <property name="geometry">
     <rect>
      <x>300</x>
-     <y>270</y>
-     <width>71</width>
-     <height>17</height>
+     <y>264</y>
+     <width>82</width>
+     <height>21</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Bahnschrift SemiBold Condensed</family>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+         color: #ffdb6f;
+         background-color: rgb(64, 64, 64);;
+         min-width: 80px;
+     }
+
+QPushButton:pressed {
+         background-color: rgb(64, 64, 64);;
+	
+}</string>
    </property>
    <property name="text">
     <string>Back</string>
@@ -108,11 +196,47 @@
   <widget class="QPlainTextEdit" name="plainTextEdit">
    <property name="geometry">
     <rect>
-     <x>43</x>
-     <y>83</y>
-     <width>311</width>
-     <height>171</height>
+     <x>10</x>
+     <y>66</y>
+     <width>381</width>
+     <height>191</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: #ffdb6f;</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_5">
+   <property name="geometry">
+    <rect>
+     <x>296</x>
+     <y>38</y>
+     <width>84</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Bahnschrift SemiBold Condensed</family>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+         color: #ffdb6f;
+         background-color: rgb(64, 64, 64);;
+         min-width: 80px;
+     }
+
+QPushButton:pressed {
+         background-color: rgb(64, 64, 64);;
+	
+}</string>
+   </property>
+   <property name="text">
+    <string>New file</string>
    </property>
   </widget>
  </widget>
