--- a/ui_filebir.ui
+++ b/ui_filebir.ui
@@ -7,14 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>510</width>
-    <height>291</height>
+    <height>316</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>RunProfit Launcher</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(246, 255, 237);</string>
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushButton">
@@ -35,7 +35,18 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">QPushButton {
+         border: 2px solid #000000;
+         border-radius :8px;
+         color: #000000;
+         background-color: rgb(255, 170, 0);;
+         min-width: 80px;
+     }
+
+QPushButton:pressed {
+         background-color: rgb(255, 170, 0);;
+	
+}</string>
     </property>
     <property name="text">
      <string>Notepad</string>
@@ -59,7 +70,18 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">QPushButton {
+         border: 1.5px solid #000000;
+         border-radius :8px;
+         color: #000000;
+         background-color: rgb(255, 170, 0);;
+         min-width: 80px;
+     }
+
+QPushButton:pressed {
+         background-color: rgb(255, 170, 0);;
+	
+}</string>
     </property>
     <property name="text">
      <string>Reminder</string>
@@ -76,52 +98,64 @@
     </property>
     <property name="font">
      <font>
-      <family>Courier New</family>
+      <family>Corbel</family>
       <pointsize>26</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
     <property name="text">
-     <string>Python program</string>
+     <string>RunProfit Launcher</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>190</y>
-      <width>261</width>
-      <height>61</height>
+      <y>201</y>
+      <width>311</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Comic Sans MS</family>
-      <pointsize>12</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
+      <family>Consolas</family>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <italic>true</italic>
+      <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
     <property name="text">
-     <string>Ваша оценка от 1 до 10</string>
+     <string>Your estimate from 1 to 10</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>210</y>
+      <x>330</x>
+      <y>209</y>
       <width>61</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>195</y>
-      <width>101</width>
-      <height>61</height>
+      <x>210</x>
+      <y>239</y>
+      <width>91</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -130,6 +164,9 @@
       <pointsize>10</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
     <property name="text">
      <string>by iMAGA</string>
     </property>
@@ -137,14 +174,53 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>240</y>
-      <width>56</width>
-      <height>17</height>
+      <x>410</x>
+      <y>209</y>
+      <width>84</width>
+      <height>21</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Bahnschrift SemiBold</family>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+         border: 1.5px solid #000000;
+         border-radius :8px;
+         color: #000000;
+         background-color: rgb(255, 170, 0);;
+         min-width: 80px;
+     }
+
+QPushButton:pressed {
+         background-color: rgb(255, 170, 0);;
+	
+}</string>
     </property>
     <property name="text">
      <string>Submit</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>240</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Bahnschrift Light</family>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
